# C90_rust

./: Cargo.toml
src/chapter_1_getting_started/examples/01.01_hello_world/: hello_world.rs
src/chapter_1_getting_started/examples/01.02_variables_and_arithmetic_expressions/: variables_and_arithmetic_expressions.rs  variables_and_arithmetic_expressions_v2.rs
src/chapter_1_getting_started/exercises/01.01/: 01_01.rs
src/chapter_1_getting_started/exercises/01.02/: 01_02.rs
src/chapter_1_getting_started/exercises/01.03/: 01_03.rs
src/chapter_1_getting_started/exercises/01.04/: 01_04.rs
